program fix and 404 picture fix

--- a/src/main/resources/templates/views/error.html
+++ b/src/main/resources/templates/views/error.html
@@ -7,7 +7,7 @@
 <div class="uk-flex uk-vertical-align uk-text-center">
     <div class="uk-container uk-vertical-align-middle uk-container-center" style="height: 500px; width: 500px">
 
-        <img th:src="@{/images/404.png}" />
+        <img th:src="@{/img/404.png}" />
 
         <h1>Oh no! Cheddar ate the page!</h1>
 
