did some mild css fixes instead of the thing this branch was made for

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -10,7 +10,7 @@
     <title th:text="${title}"></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/css/uikit.min.css" />
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}"/>
-    <link rel="icon" href="../static/img/paw_2.png"/>
+    <link rel="icon" href="../static/img/paw_2.png" th:href="@{/img/paw_2.png}"/>
 </head>
 
 <body>
