--- a/src/main/resources/templates/views/shelter_home.html
+++ b/src/main/resources/templates/views/shelter_home.html
@@ -52,13 +52,13 @@
                         <td>
                             <form th:action="'/adopt/' + ${app.getId()} + '/accept/' + ${app.getUser().getId()}"
                                   method="post">
-                                <button class="uk-button uk-button-default" type="button" onclick="UIkit.notification({message: 'Application Accepted', pos: 'top-center', status: 'success'})">Accept</button>
+                                <button class="uk-button uk-button-default" onclick="UIkit.notification({message: 'Application Accepted', pos: 'top-center', status: 'success'})">Accept</button>
                             </form>
                         </td>
                         <td>
                             <form th:action="'/adopt/' + ${app.getId()} + '/reject/' + ${app.getUser().getId()}"
                                   method="post">
-                                <button class="uk-button uk-button-default" type="button" onclick="UIkit.notification({message: 'Application Rejected', pos: 'top-center', status: 'success'})">Reject</button>
+                                <button class="uk-button uk-button-default" onclick="UIkit.notification({message: 'Application Rejected', pos: 'top-center', status: 'success'})">Reject</button>
                             </form>
                         </td>
                     </tr>
