--- a/src/main/resources/templates/views/about_me.html
+++ b/src/main/resources/templates/views/about_me.html
@@ -6,6 +6,63 @@
 
 <div class="uk-container">
 
+    <!--Ryan-->
+    <div class="uk-card">
+        <div class="uk-card-media-top">
+            <img src="/static/img/about_me/ryan_face.jpg" alt="Ryan's Face">
+        </div>
+        <div class="uk-card-body">
+            <h3 class="uk-card-title"> Ryan Houpt </h3>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/ryan-houpt/"> LinkedIn </a></li>
+                <li><a href="https://github.com/ryan-houpt "> GitHub </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!--Kyla-->
+    <div class="uk-card">
+        <div class="uk-card-media-top">
+            <img src="/static/img/about_me/kyla_face.jpg" alt="Kyla's Face">
+        </div>
+        <div class="uk-card-body">
+            <h3 class="uk-card-title"> Kyla Allen </h3>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/kyla-allen/"> LinkedIn </a></li>
+                <li><a href="https://github.com/Kyla-Allen"> GitHub </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!--KC-->
+    <div class="uk-card">
+        <div class="uk-card-media-top">
+            <img src="/static/img/about_me/kc_face.jpg" alt="KC's Face">
+        </div>
+        <div class="uk-card-body">
+            <h3 class="uk-card-title"> Kenneth McInturf </h3>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/kenneth-mcinturf/"> LinkedIn </a></li>
+                <li><a href="https://github.com/kennethmcinturf"> GitHub </a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!--Juan-->
+    <div class="uk-card">
+        <div class="uk-card-media-top">
+            <img src="/static/img/about_me/juan_face.jpg" alt="Juan's Face">
+        </div>
+        <div class="uk-card-body">
+            <h3 class="uk-card-title"> Juan De La Rose </h3>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/juan-de-la-rosa/"> LinkedIn </a></li>
+                <li><a href="https://github.com/juandelarosa1224"> GitHub </a></li>
+            </ul>
+        </div>
+    </div>
+
+
 </div>
 
 <footer th:replace="partials::footer"/>
