fixed issues with the html

--- a/src/main/resources/templates/views/about_me.html
+++ b/src/main/resources/templates/views/about_me.html
@@ -9,7 +9,7 @@
     <!--Ryan-->
     <div class="uk-card">
         <div class="uk-card-media-top">
-            <img src="/static/img/about_me/ryan_face.jpg" alt="Ryan's Face">
+            <img src="/static/img/about_me/ryan_face.jpg" alt="Ryan's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Ryan Houpt </h3>
@@ -23,7 +23,7 @@
     <!--Kyla-->
     <div class="uk-card">
         <div class="uk-card-media-top">
-            <img src="/static/img/about_me/kyla_face.jpg" alt="Kyla's Face">
+            <img src="/static/img/about_me/kyla_face.jpg" alt="Kyla's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Kyla Allen </h3>
@@ -37,7 +37,7 @@
     <!--KC-->
     <div class="uk-card">
         <div class="uk-card-media-top">
-            <img src="/static/img/about_me/kc_face.jpg" alt="KC's Face">
+            <img src="/static/img/about_me/kc_face.jpg" alt="KC's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Kenneth McInturf </h3>
@@ -51,7 +51,7 @@
     <!--Juan-->
     <div class="uk-card">
         <div class="uk-card-media-top">
-            <img src="/static/img/about_me/juan_face.jpg" alt="Juan's Face">
+            <img src="/static/img/about_me/juan_face.jpg" alt="Juan's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Juan De La Rose </h3>
@@ -66,6 +66,6 @@
 </div>
 
 <footer th:replace="partials::footer"/>
-<div th:replace="paritals::scripts"/>
+<div th:replace="partials::scripts"/>
 </body>
 </html>
