about me page basic is done

--- a/src/main/resources/templates/views/about_me.html
+++ b/src/main/resources/templates/views/about_me.html
@@ -4,12 +4,12 @@
 <body>
 <nav th:replace="partials::navbar"/>
 
-<div class="uk-container">
+<div class="uk-container uk-grid uk-flex uk-margin-auto">
 
     <!--Ryan-->
-    <div class="uk-card">
+    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small">
         <div class="uk-card-media-top">
-            <img src="/static/img/about_me/ryan_face.jpg" alt="Ryan's Face"/>
+            <img src="/img/about_me/ryan_face.jpg" alt="Ryan's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Ryan Houpt </h3>
@@ -21,9 +21,9 @@
     </div>
 
     <!--Kyla-->
-    <div class="uk-card">
+    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small">
         <div class="uk-card-media-top">
-            <img src="/static/img/about_me/kyla_face.jpg" alt="Kyla's Face"/>
+            <img src="/img/about_me/kyla_face.jpg" alt="Kyla's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Kyla Allen </h3>
@@ -35,9 +35,9 @@
     </div>
 
     <!--KC-->
-    <div class="uk-card">
+    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small">
         <div class="uk-card-media-top">
-            <img src="/static/img/about_me/kc_face.jpg" alt="KC's Face"/>
+            <img src="/img/about_me/kc_face.jpg" alt="KC's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Kenneth McInturf </h3>
@@ -49,9 +49,9 @@
     </div>
 
     <!--Juan-->
-    <div class="uk-card">
+    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small">
         <div class="uk-card-media-top">
-            <img src="/static/img/about_me/juan_face.jpg" alt="Juan's Face"/>
+            <img src="/img/about_me/juan_face.jpg" alt="Juan's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Juan De La Rose </h3>
