added other links to about me

--- a/src/main/resources/templates/views/about_me.html
+++ b/src/main/resources/templates/views/about_me.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="https://www.linkedin.com/in/ryan-houpt/"> LinkedIn </a></li>
                 <li><a href="https://github.com/ryan-houpt "> GitHub </a></li>
+                <li><a href="https://alumni.codeup.com/students/561"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
@@ -30,6 +31,7 @@
             <ul>
                 <li><a href="https://www.linkedin.com/in/kyla-allen/"> LinkedIn </a></li>
                 <li><a href="https://github.com/Kyla-Allen"> GitHub </a></li>
+                <li><a href="https://alumni.codeup.com/students/552"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
@@ -44,6 +46,7 @@
             <ul>
                 <li><a href="https://www.linkedin.com/in/kenneth-mcinturf/"> LinkedIn </a></li>
                 <li><a href="https://github.com/kennethmcinturf"> GitHub </a></li>
+                <li><a href="https://alumni.codeup.com/students/559"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
@@ -58,6 +61,7 @@
             <ul>
                 <li><a href="https://www.linkedin.com/in/juan-de-la-rosa/"> LinkedIn </a></li>
                 <li><a href="https://github.com/juandelarosa1224"> GitHub </a></li>
+                <li><a href="https://alumni.codeup.com/students/568"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
