added a link to about mein the footer

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -54,6 +54,7 @@
 <div th:fragment="footer">
     <footer class="footer uk-flex">
         <span class="uk-margin-auto">2019 Codeup. For Educational Purposes Only.</span>
+        <a href="/aboutme"> About </a>
     </footer>
 </div>
 
