--- a/src/main/resources/templates/edit_pages/editProgram.html
+++ b/src/main/resources/templates/edit_pages/editProgram.html
@@ -6,7 +6,8 @@
 <div class="container uk-flex">
 
     <form th:action="@{/editProgram}" method="POST" class="uk-margin-auto uk-width-1-2 " th:object="${program}">
-        <h1 class="uk-margin-top">Create a Program</h1>
+        <h1 class="uk-margin-top">Edit your Program</h1>
+        <p class="uk-text-center"><span th:if="${editProgram != null}" th:text="${editProgram}">No Results Found</span></p>
         <div class="uk-margin">
             <label for="name">Name</label>
             <input id="name" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{name}" />
