--- a/src/main/resources/templates/create/create_pet.html
+++ b/src/main/resources/templates/create/create_pet.html
@@ -57,9 +57,9 @@
             <!--<label for="user">User</label>-->
             <!--<input id="user" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{user}" />-->
         <!--</div>-->
-
-        <button class="uk-button uk-button-default uk-button-small" onclick="UIkit.notification({message: 'Submit successful...', status: 'success'})">Submit</button>
-
+        <div class="uk-width-expand uk-flex">
+            <button class="uk-button uk-button-default uk-margin-auto uk-width-1-2" onclick="UIkit.notification({message: 'Submit successful...', status: 'success'})">Submit</button>
+        </div>
     </form>
 </div>
 
