--- a/src/main/resources/templates/edit_pages/preference-edit.html
+++ b/src/main/resources/templates/edit_pages/preference-edit.html
@@ -30,8 +30,8 @@
         <div class="uk-margin">
             <label for="sex">Sex</label>
             <select id="sex" class="uk-input uk-form-width-medium uk-width-expand" name="sex" th:value="${oldPref.getSex()}">
-                <option value="m">Male</option>
-                <option value="f">Female</option>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
             </select>
         </div>
         <div class="uk-margin">
