--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -18,10 +18,16 @@ li a{
 li a:hover {
     color: #a02489;
 }
+
+body {
+    margin-bottom:50px;
+}
+
 .footer {
-    position: sticky;
-    bottom: 100px;
-    left: 45px;
-    /*width:100%;*/
-    height:100px;   /* Height of the footer */
+    position: fixed;
+    height: 50px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin-bottom: 0px;
 }
