--- a/src/main/resources/templates/create/create_pet.html
+++ b/src/main/resources/templates/create/create_pet.html
@@ -25,8 +25,11 @@
         </div>
 
         <div>
-            <label for="sex">Sex</label>
-            <input id="sex" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{sex}" />
+            <label for="color">Sex</label>
+            <select id="sex" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" name="sex" th:field="*{sex}">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+            </select>
         </div>
 
         <div>
