--- a/src/main/resources/templates/views/all_pets.html
+++ b/src/main/resources/templates/views/all_pets.html
@@ -25,7 +25,7 @@
                             <p id="description" th:text="${pet.description}"></p>
                             <div th:if="${user.isShelter}">
                                 <form th:action="'/pet/delete/' + ${pet.id}" method="POST">
-                                    <button type="submit" class="uk-margin-small-right">Delete Pet</button>
+                                    <button  type="submit" class="uk-button uk-button-primary uk-button-small">Delete Pet</button>
                                 </form>
                             </div>
                         </div>
