--- a/src/main/resources/templates/views/showVolunteer.html
+++ b/src/main/resources/templates/views/showVolunteer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace = "partials :: head('Pets')"/>
+<head th:replace = "partials :: head('Volunteer List')"/>
 <body>
 
 <div class="container uk-margin-bottom">
