finalized about-me

--- a/src/main/resources/templates/views/about_me.html
+++ b/src/main/resources/templates/views/about_me.html
@@ -7,61 +7,61 @@
 <div class="uk-container uk-grid uk-flex uk-margin-auto">
 
     <!--Ryan-->
-    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small">
+    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small uk-animation-slide-left">
         <div class="uk-card-media-top">
             <img src="/img/about_me/ryan_face.jpg" alt="Ryan's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Ryan Houpt </h3>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/ryan-houpt/"> LinkedIn </a></li>
-                <li><a href="https://github.com/ryan-houpt "> GitHub </a></li>
-                <li><a href="https://alumni.codeup.com/students/561"> Codeup Profile </a></li>
+            <ul style="list-style-type: none">
+                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/ryan-houpt/"> LinkedIn </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/ryan-houpt "> GitHub </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/561"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
 
     <!--Kyla-->
-    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small">
+    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small uk-animation-slide-left">
         <div class="uk-card-media-top">
             <img src="/img/about_me/kyla_face.jpg" alt="Kyla's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Kyla Allen </h3>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/kyla-allen/"> LinkedIn </a></li>
-                <li><a href="https://github.com/Kyla-Allen"> GitHub </a></li>
-                <li><a href="https://alumni.codeup.com/students/552"> Codeup Profile </a></li>
+            <ul style="list-style-type: none">
+                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/kyla-allen/"> LinkedIn </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/Kyla-Allen"> GitHub </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/552"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
 
     <!--KC-->
-    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small">
+    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small uk-animation-slide-right">
         <div class="uk-card-media-top">
             <img src="/img/about_me/kc_face.jpg" alt="KC's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Kenneth McInturf </h3>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/kenneth-mcinturf/"> LinkedIn </a></li>
-                <li><a href="https://github.com/kennethmcinturf"> GitHub </a></li>
-                <li><a href="https://alumni.codeup.com/students/559"> Codeup Profile </a></li>
+            <ul style="list-style-type: none">
+                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/kenneth-mcinturf/"> LinkedIn </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/kennethmcinturf"> GitHub </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/559"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
 
     <!--Juan-->
-    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small">
+    <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small uk-animation-slide-right">
         <div class="uk-card-media-top">
             <img src="/img/about_me/juan_face.jpg" alt="Juan's Face"/>
         </div>
         <div class="uk-card-body">
             <h3 class="uk-card-title"> Juan De La Rose </h3>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/juan-de-la-rosa/"> LinkedIn </a></li>
-                <li><a href="https://github.com/juandelarosa1224"> GitHub </a></li>
-                <li><a href="https://alumni.codeup.com/students/568"> Codeup Profile </a></li>
+            <ul style="list-style-type: none">
+                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/juan-de-la-rosa/"> LinkedIn </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/juandelarosa1224"> GitHub </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/568"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
